--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -3084,7 +3084,7 @@ ${dwarfInformation} ${hillDwarfInformation} ${mountainDwarfInformation} ${duerga
     const boxHeight1 = 200;
 
     const lines1 = pdf.splitTextToSize(attacks1, boxWidth1);
-    pdf.rect(165, 200, 108, 150);
+    pdf.rect(165, 180, 108, 165);
     pdf.setFontSize(8);
     lines1.forEach((line1, i) => {
       const lineHeight1 = 9;
@@ -3101,6 +3101,10 @@ ${dwarfInformation} ${hillDwarfInformation} ${mountainDwarfInformation} ${duerga
       if (lineY > y + boxHeight) return;
       pdf.text(line, x, lineY);
     });
+
+    pdf.setFontSize(10);
+    pdf.text("" + backStory, 173, 370);
+    pdf.rect(163, 350, 267, 130);
 
     pdf.save("character-sheet.pdf");
 });
