--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1008,9 +1008,46 @@ main {
 	opacity: 1;
 }
 
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#overlay img {
+    max-width: 100%;
+    max-height: 80vh; /* Adjust as needed */
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+#overlay p {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    animation: bounce 1s infinite;
+}
     </style>
 </head>
 <body>
+  <div id="overlay">
+		<p>Loading Dice...</p>
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGdlaTAycXk2cXFlaDdpZjBpNzU0c2JrZTEzajA3eG42eDM4MWt3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/lwZRzunzPpwMPRT4kf/giphy.gif" alt="Welcome Image">
+    </div>
     <div class="container">
     <div id="main">
         <h1>DND Master</h1>
