commit to da bit

--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -846,6 +846,13 @@ input::-webkit-inner-spin-button {
   stroke: var(--blue-6);
 }
 
+@media (max-width: 600px) {
+  .dodec {
+    width: 80px;
+    height: 76px;
+  }
+}
+
 ul {
   list-style: none;
   margin: 0;
