commit to the bit

--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -850,8 +850,12 @@ input::-webkit-inner-spin-button {
   .dodec {
     width: 80px;
     height: 76px;
+    perspective: 400px;
   }
-}
+  .dodec div{
+    transform-style: preserve-3d;
+  }
+  }
 
 ul {
   list-style: none;
