commit toall bits

--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -847,12 +847,12 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width: 600px) {
-  .dodec {
+  .dodec, .pentrap {
     width: 80px;
     height: 76px;
     perspective: 400px;
   }
-  .dodec div{
+  .dodec div, .pentrap div{
     transform-style: preserve-3d;
   }
   }
