--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -851,6 +851,7 @@ input::-webkit-inner-spin-button {
     width: 80px;
     height: 76px;
     perspective: 400px;
+    transform: scale(0.8);
   }
   .dodec div, .pentrap div{
     transform-style: preserve-3d;
