commitment is hard

--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1058,7 +1058,7 @@ main {
 <body>
   <div id="overlay">
 		<p>Loading Dice...</p>
-        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGdlaTAycXk2cXFlaDdpZjBpNzU0c2JrZTEzajA3eG42eDM4MWt3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/lwZRzunzPpwMPRT4kf/giphy.gif" alt="Welcome Image">
+        <img src="DNDMaster/DiceLoadingIMG.gif" alt="Welcome Image">
     </div>
     <div class="container">
     <div id="main">
