--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1058,7 +1058,7 @@ main {
 <body>
   <div id="overlay">
 		<p>Loading Dice...</p>
-        <img src="" alt="Welcome Image">
+        <img src="DiceLoadingIMG.gif" alt="Welcome Image">
     </div>
     <div class="container">
     <div id="main">
