--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1034,8 +1034,8 @@ main {
 }
 
 #overlay img {
-    max-width: 80vh;
-    max-height: 80vh; /* Adjust as needed */
+    max-width: 350px;
+    max-height: 382px; /* Adjust as needed */
 }
 
 @keyframes bounce {
