--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -16,7 +16,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #ffba91;
+            background-color: #ff5e00;
             color: #333;
             padding: 20px;
             display: flex;
@@ -27,13 +27,13 @@
         }
 
         h1, h2, h3 {
-            color: #ff3c00; /* Primary color */
+            color: #bc2c00; /* Primary color */
             margin-bottom: 10px;
             text-align: center;
         }
 
         .container {
-            background-color: #ffffff;
+            background-color: #6c6c6c;
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -79,7 +79,7 @@
         }
 
         button {
-            background-color: #fc6203; /* Button color */
+            background-color: #813201; /* Button color */
             color: white;
             border: none;
             padding: 12px;
@@ -92,7 +92,7 @@
         }
 
         button:hover {
-            background-color: #ff3c00; /* Darker shade on hover */
+            background-color: #721b00; /* Darker shade on hover */
         }
 
         .hidden {
