--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -33,9 +33,9 @@
         }
 
         .container {
-            background-color: #ff884d;
+            background-color: #ff6f01;
             border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 50px rgb(255, 102, 0);
             padding: 20px;
             width: 100%;
             max-width: 500px; /* Set max width for responsiveness */
@@ -74,25 +74,22 @@
         input[type="text"]:focus,
         input[type="number"]:focus,
         select:focus {
-            border-color: #fc6203; /* Focus color */
+            border-color: #000000; /* Focus color */
             outline: none;
         }
 
         button {
-            background-color: #ff3c00; /* Button color */
-            color: white;
+            background-color: #ffffff; /* Button color */
+            color: rgb(255, 96, 33);
             border: none;
             padding: 12px;
             border-radius: 6px;
             cursor: pointer;
             width: 100%;
             font-size: 16px;
+            box-shadow: 0 6px 50px rgb(255, 47, 0);
             transition: background-color 0.3s;
             margin-bottom: 15px;
-        }
-
-        button:hover {
-            background-color: #a52700; /* Darker shade on hover */
         }
 
         .hidden {
@@ -333,11 +330,14 @@ input::-webkit-inner-spin-button {
 }
 
 .dice {
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
   height: var(--dc-size);
   margin-bottom: 36px;
+  border: none;
+  outline: none;
 }
 
 .outcome-cont {
@@ -365,6 +365,7 @@ input::-webkit-inner-spin-button {
 .roll-button:hover {
   cursor: pointer;
 }
+
 
 /*---------- d4 ----------*/
 /*--- ORIGINAL TETRAHEDRON CODE https://codepen.io/web-tiki/pen/wGmWOq?editors=1100 ---*/
