--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -994,11 +994,13 @@ main {
 .book-content {
 	transform: scale(0.9) translateY(30px);
 	background-color: white !important;
+  color: black;
 	transition: all 0.3s 1s;
 }
 
 .book-content h3,
 .book-content p {
+  color: black;
 	opacity: 0;
 	transition: all 0.3s 0.3s;
 }
