--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1064,7 +1064,7 @@ main {
     </style>
 </head>
 <body>
-  <div id="ovrlay">
+  <div id="overlay">
 		<p>Loading Dice...</p>
         <img src="DiceLoadingIMG.gif" alt="Welcome Image">
     </div>
