Fix button image

--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1028,7 +1028,7 @@ main {
   color: black;
 }
 
-#overlay {
+#ovrlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -1071,8 +1071,8 @@ main {
     <div class="container">
     <div id="main">
         <h1><style></style>DND Master</h1>
-        <button onclick="showSection('characterGen')"><img src="https://i.pinimg.com/474x/da/43/c6/da43c660e6b2817e4c03990c2503abfa.jpg"><p>Character Generator</p></button>
-        <button onclick="showSection('spellGuide')"><img src="https://ih1.redbubble.net/image.4574751503.0086/aps,504x498,medium,transparent-pad,600x600,f8f8f8.u1.webp"><p>Spell Book</p></button>
+        <button onclick="showSection('characterGen')"><img src="CharacterGen.png"><p>Character Generator</p></button>
+        <button onclick="showSection('spellGuide')"><img src="SpellBook.png"><p>Spell Book</p></button>
         <div id="container-Dice">
           <!-- d4 -->
           <div class="dice-cont">
