--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -943,7 +943,7 @@ main {
 	position: absolute;
 	z-index: 9;
 	text-align: center;
-	background: linear-gradient(135deg, rgb(50, 20, 20) 25%, transparent 25%) -50px 0,
+	background: linear-gradient(135deg, rgb(22, 22, 22) 25%, transparent 25%) -50px 0,
 		linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
 		linear-gradient(315deg, black 25%, transparent 25%),
 		linear-gradient(45deg, black 25%, transparent 25%);
@@ -960,14 +960,14 @@ main {
 	right: 20px;
 	top: 0;
 	bottom: 0;
-	background-color: #b11509;
+	background-color: #000000;
 }
 
 .separator {
 	--separator-size: 8px;
 	width: var(--separator-size);
 	height: var(--separator-size);
-	background-color: #dbd75d;
+	background-color: #fd6500;
 	margin: 50px auto 60px auto;
 	border-radius: 50%;
 	position: relative;
@@ -1028,7 +1028,7 @@ main {
   color: rgb(255, 67, 10);
 }
 
-#overlay {
+#ovrlay {
     position: fixed;
     top: 0;
     left: 0;
