--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -2673,7 +2673,7 @@ function assignWeapons(className) {
         };
     } else {
         // For non-weapon users
-        return { best: "Non-weapon user", simple: "Non-weapon user" };
+        return { best: "", simple: "" };
     }
 }
 
