--- a/Dice.html
+++ b/Dice.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DnDMaster/Dice</title>
+    <title>DnDMaster/Books</title>
     <link rel="stylesheet" href="Dice.css">
 </head>
 <body>
     <div class="BackButton">
         <button onclick="location.href='DnDMaster (1).html'" ontouch="location.href='DnDMaster (1).html'">Back</button>
-    <form class="container"><input type="radio" name="title" id="book1" /><input type="radio" name="title" id="book2" /><input type="radio" name="title" id="book3" /><input type="radio" name="title" id="book4" /><input type="radio" name="title" id="book5" /><input type="radio" name="title"
-    id="book6" /><input type="radio" name="title" id="book7" /><input type="radio" name="title" id="book8" /><input type="radio" name="title" id="book9" /><input type="radio" name="title" id="book10" /><input type="radio" name="title" id="book11" />
-<div
-    class="surface">
+    </div>
+    <form class="container">
+        <input type="radio" name="title" id="book1" />
+        <input type="radio" name="title" id="book2" />
+        <input type="radio" name="title" id="book3" />
+        <input type="radio" name="title" id="book4" />
+        <input type="radio" name="title" id="book5" />
+        <input type="radio" name="title" id="book6" />
+        <input type="radio" name="title" id="book7" />
+        <input type="radio" name="title" id="book8" />
+        <input type="radio" name="title" id="book9" />
+        <input type="radio" name="title" id="book10" />
+        <input type="radio" name="title" id="book11" />
+<div class="surface">
     <div class="block b1">
         <div class="block-inner">
             <div class="back"></div>
