--- a/Dice.html
+++ b/Dice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="BackButton">
-        <button onclick="location.href='DnDMaster (1).html'" ontouch="location.href='DnDMaster (1).html'">Back</button>
+        <button onclick="location.href='DnDMaster (1).html'">Back</button>
     </div>
     <form class="container">
         <input type="radio" name="title" id="book1" />
