--- a/DnDMaster (1).html
+++ b/DnDMaster (1).html
@@ -1066,7 +1066,7 @@ main {
     </div>
     <div class="container">
     <div id="main">
-        <h1><style></style>DND Master</h1>
+        <img src="DNDLogo.png">
         <button onclick="showSection('characterGen')"><img src="CharacterGen.png"><p>Character Generator</p></button>
             <button onclick="location.href='Dice.html'"><img src="SpellBook.png"><p>Spell Book</p></button></button>
         <div id="container-Dice">
