--- a/Dice.html
+++ b/Dice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="BackButton">
-        <button><a href="DnDMaster (1).html">Back</a></button>
+       <button onclick="document.location='https://orangolex.github.io/DNDMaster/DnDMaster%20(1).html'">Back</button>
     </div>
     <form class="container">
         <input type="radio" name="title" id="book1" />
