--- a/Dice.html
+++ b/Dice.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Dice.css">
 </head>
 <body>
-<button onclick="location.href='https://orangolex.github.io/DNDMaster/DnDMaster%20(1).html'">Back</button>
+<button onclick= location.href='https://orangolex.github.io/DNDMaster/DnDMaster%20(1).html'>Back</button>
     <form class="container">
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
