--- a/Dice.html
+++ b/Dice.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="Dice.css">
 </head>
 <body>
-<a href="https://google.com" class="btn btn-primary">Go to Google</a>
+<button onclick="location.href='http://www.example.com'" type="button">
+         www.example.com</button>
     <form class="container">
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
