back button attempt #2

--- a/Dice.html
+++ b/Dice.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Dice.css">
 </head>
 <body>
-  <button onclick="window.history.back();">Go Back</button> 
+  <button a href="google.com">Go Back</button>
     <form class="container">
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
