--- a/Dice.html
+++ b/Dice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form class="container">
-        <button a href="DnDMaster.html">Back</button>
+        <button onclick="document.location='DnDMaster.html'">HTML Tutorial</button>
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
         <input type="radio" name="title" id="book3" />
