--- a/Dice.html
+++ b/Dice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form class="container">
-        <button onclick="document.location='DnDMaster.html'">HTML Tutorial</button>
+        <button id="navigateButton">HTML Tutorial</button>
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
         <input type="radio" name="title" id="book3" />
@@ -1201,3 +1201,8 @@
                     </div>
                     <input type="reset" value="Return" /></form>
                         </body>
+    <script>
+      document.getElementById('navigateButton').addEventListener('click', function() {
+    window.location.href = 'DnDMaster.html';
+  });
+</script>
