--- a/Dice.html
+++ b/Dice.html
@@ -90,8 +90,7 @@
             <div class="top"></div>
         </div>
     </label>
-    <label
-        class="block b7" for="book2">
+    <label class="block b7" for="book2">
         <div class="block-inner">
             <div class="back"></div>
             <div class="bottom"></div>
@@ -129,8 +128,7 @@
                 <div class="top"></div>
                 </div>
             </label>
-        <label
-            class="block b9" for="book4">
+        <label class="block b9" for="book4">
             <div class="block-inner">
                 <div class="back"></div>
                 <div class="bottom"></div>
@@ -192,8 +190,7 @@
                     <div class="top"></div>
                 </div>
             </label>
-            <label
-                class="block b11" for="book6">
+            <label class="block b11" for="book6">
                 <div class="block-inner">
                     <div class="back"></div>
                     <div class="bottom"></div>
@@ -231,8 +228,7 @@
                     <div class="top"></div>
                 </div>
                 </label>
-                <label
-                    class="block b13" for="book8">
+                <label class="block b13" for="book8">
                     <div class="block-inner">
                         <div class="back"></div>
                         <div class="bottom"></div>
@@ -1071,8 +1067,7 @@
                             <div class="top"></div>
                         </div>
                     </label>
-                    <label
-                        class="block b15" for="book10">
+                    <label class="block b15" for="book10">
                         <div class="block-inner">
                             <div class="back"></div>
                             <div class="bottom"></div>
