--- a/Dice.html
+++ b/Dice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form class="container" onsubmit="return false;">
-      <button id="navigateButton">HTML Tutorial</button>
+      <button id="navigateButton">BACK</button>
         <input type="radio" name="title" id="book1" />
         <input type="radio" name="title" id="book2" />
         <input type="radio" name="title" id="book3" />
